--- a/S13_Time_Series_taxi_orders_in_next_hour.ipynb
+++ b/S13_Time_Series_taxi_orders_in_next_hour.ipynb
@@ -6,7 +6,7 @@
       "name": "S13 Time Series - taxi orders in next hour.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPw+BYsjtmCysWrcJ6SKq7w",
+      "authorship_tag": "ABX9TyMOsOU+85y6UROzOVAH55d7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "else:\n",
         "    data_path = '/datasets/taxi.csv'"
       ],
-      "execution_count": 93,
+      "execution_count": 206,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
         "pd.set_option('display.max_columns', None)\n",
         "pd.options.display.float_format = '{:11,.2f}'.format"
       ],
-      "execution_count": 94,
+      "execution_count": 207,
       "outputs": []
     },
     {
@@ -122,7 +122,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 228
         },
-        "outputId": "7babbadf-18ed-4811-88c2-80cfc36ea9f3"
+        "outputId": "fc5b248d-9d95-4dca-9f68-bec63624c1de"
       },
       "source": [
         "data = pd.read_csv(data_path, index_col=[0],  parse_dates=[0])\n",
@@ -130,7 +130,7 @@
         "data = data.resample('1H').sum()\n",
         "data.head()"
       ],
-      "execution_count": 119,
+      "execution_count": 208,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -199,7 +199,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 208
         }
       ]
     },
@@ -222,13 +222,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 284
         },
-        "outputId": "945e9b27-08be-40e8-e31e-4e99a6cb2758"
+        "outputId": "45d06d54-5086-472a-ec42-3a21daee2775"
       },
       "source": [
         "print(data.info())\n",
         "data.boxplot(vert=False, figsize=(9,1));"
       ],
-      "execution_count": 120,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "data['dayofweek'] = data.index.dayofweek\n",
         "data['hour'] = data.index.hour"
       ],
-      "execution_count": 121,
+      "execution_count": 210,
       "outputs": []
     },
     {
@@ -574,8 +574,9 @@
         "colab": {}
       },
       "source": [
-        "def prepare_sets(max_lag, rolling_mean_size):\n",
+        "def prepare_sets(max_lag):\n",
         "    df = data.copy()\n",
+        "    rolling_mean_size=5\n",
         "    for lag in range(1, max_lag + 1):\n",
         "        df['lag_{}'.format(lag)] = df['num_orders'].shift(lag)\n",
         "    df['rolling_mean'] = df['num_orders'].shift().rolling(rolling_mean_size).mean()\n",
@@ -593,7 +594,7 @@
         "    target_test = test['num_orders'] \n",
         "    return features_train, target_train, features_valid, target_valid, features_test, target_test"
       ],
-      "execution_count": 151,
+      "execution_count": 211,
       "outputs": []
     },
     {
@@ -610,7 +611,7 @@
         "    rmse_test = mean_squared_error(target_test, prediction_test) ** 0.5\n",
         "    print(f'RMSE Train: {rmse_train:,.0f}, Valid: {rmse_valid:,.0f}, Test: {rmse_test:,.0f}, diff(Train,Valid):{100*(rmse_valid - rmse_train)/rmse_train:,.1f}%')"
       ],
-      "execution_count": 172,
+      "execution_count": 212,
       "outputs": []
     },
     {
@@ -620,23 +621,13 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 526
+          "height": 235
         },
-        "outputId": "585570b2-c61c-4c1c-976f-f1fcb4601597"
+        "outputId": "0980cc42-cb3c-441f-a567-26586d987827"
       },
       "source": [
-        "def eval_model (model_type, max_lag, rolling_mean_size):\n",
-        "    features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag, rolling_mean_size)\n",
-        "    model = model_type()\n",
-        "    model.fit(features_train, target_train)\n",
-        "    print(f'{model_type.__name__},max_lag:{max_lag},'\\\n",
-        "          f'rolling_mean_size:{rolling_mean_size},'\\\n",
-        "          f'RMSE train: {sqrt(mean_squared_error(target_train, model.predict(features_train))):.1f},'\\\n",
-        "          f'RMSE valid: {sqrt(mean_squared_error(target_valid, model.predict(features_valid))):.1f},'\\\n",
-        "          f'RMSE test: {sqrt(mean_squared_error(target_test, model.predict(features_test))):.1f}')\n",
-        "\n",
-        "for max_lag in range(10,150, 10):\n",
-        "    features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag, rolling_mean_size=10)\n",
+        "for max_lag in range(100, 130, 5):\n",
+        "    features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag)\n",
         "    model = LinearRegression()\n",
         "    model.fit(features_train, target_train)\n",
         "    # model_name = model_type.__name__\n",
@@ -646,42 +637,106 @@
         "    print(f'max_lag:{max_lag}')\n",
         "    print_rmse()"
       ],
-      "execution_count": 176,
+      "execution_count": 213,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "max_lag:10\n",
-            "RMSE Train: 29, Valid: 41, Test: 54, diff(Train,Valid):40.5%\n",
-            "max_lag:20\n",
-            "RMSE Train: 28, Valid: 39, Test: 56, diff(Train,Valid):40.2%\n",
-            "max_lag:30\n",
-            "RMSE Train: 24, Valid: 34, Test: 48, diff(Train,Valid):41.5%\n",
-            "max_lag:40\n",
-            "RMSE Train: 24, Valid: 34, Test: 50, diff(Train,Valid):41.8%\n",
-            "max_lag:50\n",
-            "RMSE Train: 22, Valid: 32, Test: 44, diff(Train,Valid):42.8%\n",
-            "max_lag:60\n",
-            "RMSE Train: 22, Valid: 32, Test: 45, diff(Train,Valid):43.4%\n",
-            "max_lag:70\n",
-            "RMSE Train: 22, Valid: 32, Test: 45, diff(Train,Valid):43.0%\n",
-            "max_lag:80\n",
-            "RMSE Train: 22, Valid: 31, Test: 44, diff(Train,Valid):42.2%\n",
-            "max_lag:90\n",
-            "RMSE Train: 21, Valid: 31, Test: 44, diff(Train,Valid):42.8%\n",
             "max_lag:100\n",
-            "RMSE Train: 21, Valid: 30, Test: 43, diff(Train,Valid):41.8%\n",
+            "RMSE Train: 21, Valid: 30, Test: 40, diff(Train,Valid):40.4%\n",
+            "max_lag:105\n",
+            "RMSE Train: 21, Valid: 30, Test: 40, diff(Train,Valid):40.0%\n",
             "max_lag:110\n",
-            "RMSE Train: 21, Valid: 30, Test: 42, diff(Train,Valid):41.5%\n",
+            "RMSE Train: 21, Valid: 30, Test: 40, diff(Train,Valid):40.3%\n",
+            "max_lag:115\n",
+            "RMSE Train: 21, Valid: 30, Test: 40, diff(Train,Valid):40.2%\n",
             "max_lag:120\n",
-            "RMSE Train: 21, Valid: 29, Test: 41, diff(Train,Valid):41.5%\n",
-            "max_lag:130\n",
-            "RMSE Train: 21, Valid: 29, Test: 41, diff(Train,Valid):41.8%\n",
-            "max_lag:140\n",
-            "RMSE Train: 21, Valid: 30, Test: 42, diff(Train,Valid):43.0%\n"
+            "RMSE Train: 21, Valid: 29, Test: 40, diff(Train,Valid):41.0%\n",
+            "max_lag:125\n",
+            "RMSE Train: 21, Valid: 29, Test: 40, diff(Train,Valid):41.3%\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vHcerokapwiQ",
+        "colab_type": "text"
+      },
+      "source": [
+        "max_lag:100\n",
+        "RMSE Train: 21, Valid: 30, Test: 43, diff(Train,Valid):41.8%\n",
+        "max_lag:105\n",
+        "RMSE Train: 21, Valid: 30, Test: 43, diff(Train,Valid):41.3%\n",
+        "max_lag:110\n",
+        "RMSE Train: 21, Valid: 30, Test: 42, diff(Train,Valid):41.5%\n",
+        "max_lag:115\n",
+        "RMSE Train: 21, Valid: 30, Test: 42, diff(Train,Valid):41.3%\n",
+        "max_lag:120\n",
+        "RMSE Train: 21, Valid: 29, Test: 41, diff(Train,Valid):41.5%\n",
+        "max_lag:125\n",
+        "RMSE Train: 21, Valid: 29, Test: 41, diff(Train,Valid):42.0%"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EzoMeZ59cfT0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "e7dd1480-c327-4431-d009-133825073b4a"
+      },
+      "source": [
+        "max_lag = 115\n",
+        "df = data.copy()\n",
+        "rolling_mean_size=5\n",
+        "for lag in range(1, max_lag + 1):\n",
+        "    df['lag_{}'.format(lag)] = df['num_orders'].shift(lag)\n",
+        "df['rolling_mean'] = df['num_orders'].shift().rolling(rolling_mean_size).mean()\n",
+        "\n",
+        "train, test = train_test_split(df, shuffle=False, test_size=0.1)\n",
+        "\n",
+        "train = train.dropna()\n",
+        "\n",
+        "features_train = train.drop(['num_orders'], axis=1)\n",
+        "target_train = train['num_orders']\n",
+        "features_test = test.drop(['num_orders'], axis=1)\n",
+        "target_test = test['num_orders'] \n",
+        "\n",
+        "model = LinearRegression()\n",
+        "model.fit(features_train, target_train)\n",
+        "\n",
+        "prediction_train = model.predict(features_train)\n",
+        "prediction_test = model.predict(features_test)\n",
+        "\n",
+        "rmse_train = mean_squared_error(target_train, prediction_train) ** 0.5\n",
+        "rmse_test = mean_squared_error(target_test, prediction_test) ** 0.5\n",
+        "print(f'RMSE Train: {rmse_train:,.0f}, Test: {rmse_test:,.0f}')"
+      ],
+      "execution_count": 214,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "RMSE Train: 22, Test: 40\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B23qlSbCpze0",
+        "colab_type": "text"
+      },
+      "source": [
+        "RMSE Train: 22, Test: 41"
       ]
     },
     {
@@ -752,10 +807,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "9a8f705e-8247-4ce6-f9c3-e2d5be1f09c8"
+        "outputId": "a84afacd-3606-4346-ecea-7a37a2ca6d67"
       },
       "source": [
-        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200, rolling_mean_size=10)\n",
+        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200)\n",
         "model = RandomForestRegressor(random_state=12345, max_depth=20)\n",
         "model.fit(features_train, target_train)\n",
         "prediction_train = model.predict(features_train)\n",
@@ -763,12 +818,12 @@
         "prediction_test = model.predict(features_test)\n",
         "print_rmse()"
       ],
-      "execution_count": 178,
+      "execution_count": 215,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "RMSE Train: 8, Valid: 30, Test: 43, diff(Train,Valid):298.6%\n"
+            "RMSE Train: 8, Valid: 30, Test: 43, diff(Train,Valid):296.0%\n"
           ],
           "name": "stdout"
         }
@@ -783,10 +838,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "95049c13-f8a0-495c-959e-3c0f231c2045"
+        "outputId": "710d3606-d61d-41f7-b4c5-82721b7d7157"
       },
       "source": [
-        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200, rolling_mean_size=10)\n",
+        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200)\n",
         "model = RandomForestRegressor(random_state=12345, max_depth=7)\n",
         "model.fit(features_train, target_train)\n",
         "prediction_train = model.predict(features_train)\n",
@@ -794,12 +849,12 @@
         "prediction_test = model.predict(features_test)\n",
         "print_rmse()"
       ],
-      "execution_count": 179,
+      "execution_count": 216,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "RMSE Train: 15, Valid: 30, Test: 44, diff(Train,Valid):98.6%\n"
+            "RMSE Train: 15, Valid: 30, Test: 44, diff(Train,Valid):97.4%\n"
           ],
           "name": "stdout"
         }
@@ -814,10 +869,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "20b70c93-a403-415b-efae-4c1ebf950e88"
+        "outputId": "1ba8507f-eadb-406b-ac51-2fbd099c109d"
       },
       "source": [
-        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200, rolling_mean_size=10)\n",
+        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200)\n",
         "model = RandomForestRegressor(random_state=12345, max_depth=6)\n",
         "model.fit(features_train, target_train)\n",
         "prediction_train = model.predict(features_train)\n",
@@ -825,12 +880,12 @@
         "prediction_test = model.predict(features_test)\n",
         "print_rmse()"
       ],
-      "execution_count": 180,
+      "execution_count": 217,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "RMSE Train: 17, Valid: 31, Test: 45, diff(Train,Valid):81.3%\n"
+            "RMSE Train: 17, Valid: 31, Test: 45, diff(Train,Valid):79.7%\n"
           ],
           "name": "stdout"
         }
@@ -843,12 +898,12 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 90
+          "height": 108
         },
-        "outputId": "985475b4-c7ce-475c-8b7d-f4e7ff373eaa"
+        "outputId": "8f21add4-c987-45ab-f06c-90f3c753ab1c"
       },
       "source": [
-        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200, rolling_mean_size=10)\n",
+        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200)\n",
         "nleaves = 30\n",
         "params = {\n",
         " 'boosting_type': 'gbdt',\n",
@@ -874,15 +929,16 @@
         "prediction_test = gbm.predict(features_test, num_iteration=gbm.best_iteration)\n",
         "print_rmse()"
       ],
-      "execution_count": 181,
+      "execution_count": 218,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training until validation scores don't improve for 5 rounds.\n",
+            "[100]\tvalid_0's rmse: 29.2533\n",
             "Early stopping, best iteration is:\n",
-            "[86]\tvalid_0's rmse: 29.669\n",
-            "RMSE Train: 13, Valid: 30, Test: 43, diff(Train,Valid):133.7%\n"
+            "[95]\tvalid_0's rmse: 29.2487\n",
+            "RMSE Train: 12, Valid: 29, Test: 43, diff(Train,Valid):138.9%\n"
           ],
           "name": "stdout"
         }
@@ -897,10 +953,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 108
         },
-        "outputId": "04bdeecf-55ac-498d-e2d8-32a2e09ee130"
+        "outputId": "32c1b6ff-0bef-40ed-ad5c-90d38085c21d"
       },
       "source": [
-        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200, rolling_mean_size=10)\n",
+        "features_train, target_train, features_valid, target_valid, features_test, target_test = prepare_sets(max_lag=200)\n",
         "nleaves = 17\n",
         "params = {\n",
         " 'boosting_type': 'gbdt',\n",
@@ -926,16 +982,16 @@
         "prediction_test = gbm.predict(features_test, num_iteration=gbm.best_iteration)\n",
         "print_rmse()"
       ],
-      "execution_count": 182,
+      "execution_count": 219,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Training until validation scores don't improve for 5 rounds.\n",
-            "[100]\tvalid_0's rmse: 29.1151\n",
+            "[100]\tvalid_0's rmse: 29.1699\n",
             "Early stopping, best iteration is:\n",
-            "[104]\tvalid_0's rmse: 29.0078\n",
-            "RMSE Train: 14, Valid: 29, Test: 44, diff(Train,Valid):100.4%\n"
+            "[109]\tvalid_0's rmse: 29.1034\n",
+            "RMSE Train: 14, Valid: 29, Test: 43, diff(Train,Valid):103.3%\n"
           ],
           "name": "stdout"
         }
