--- a/S17_Final_Project.ipynb
+++ b/S17_Final_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "S17_Final_Project.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP0Ngk2k6KaCh8N3zYQi5R2",
+      "authorship_tag": "ABX9TyNzz4eXFDiWoSAemUXje4KY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "pd.options.display.float_format = '{:11,.2f}'.format\n",
         "np.set_printoptions(precision=2)"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -62,13 +62,313 @@
         "df_internet = pd.read_csv(data_path + 'internet.csv')\n",
         "df_contract = pd.read_csv(data_path + 'contract.csv')"
       ],
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0Ofe-e1KSEDb",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 360
+        },
+        "outputId": "04d78e4b-df0d-40f8-f44e-088700549493"
+      },
+      "source": [
+        "df_customer = pd.merge(pd.merge(pd.merge(\n",
+        "    df_personal, \n",
+        "    df_phone, on='customerID', how='outer'), \n",
+        "    df_internet, on='customerID', how='outer'), \n",
+        "    df_contract, on='customerID', how='outer')\n",
+        "df_customer.head()"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>customerID</th>\n",
+              "      <th>gender</th>\n",
+              "      <th>SeniorCitizen</th>\n",
+              "      <th>Partner</th>\n",
+              "      <th>Dependents</th>\n",
+              "      <th>MultipleLines</th>\n",
+              "      <th>InternetService</th>\n",
+              "      <th>OnlineSecurity</th>\n",
+              "      <th>OnlineBackup</th>\n",
+              "      <th>DeviceProtection</th>\n",
+              "      <th>TechSupport</th>\n",
+              "      <th>StreamingTV</th>\n",
+              "      <th>StreamingMovies</th>\n",
+              "      <th>BeginDate</th>\n",
+              "      <th>EndDate</th>\n",
+              "      <th>Type</th>\n",
+              "      <th>PaperlessBilling</th>\n",
+              "      <th>PaymentMethod</th>\n",
+              "      <th>MonthlyCharges</th>\n",
+              "      <th>TotalCharges</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>7590-VHVEG</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>DSL</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>2020-01-01</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Month-to-month</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Electronic check</td>\n",
+              "      <td>29.85</td>\n",
+              "      <td>29.85</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>5575-GNVDE</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>DSL</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>2017-04-01</td>\n",
+              "      <td>No</td>\n",
+              "      <td>One year</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Mailed check</td>\n",
+              "      <td>56.95</td>\n",
+              "      <td>1889.5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3668-QPYBK</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>DSL</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>2019-10-01</td>\n",
+              "      <td>2019-12-01 00:00:00</td>\n",
+              "      <td>Month-to-month</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Mailed check</td>\n",
+              "      <td>53.85</td>\n",
+              "      <td>108.15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>7795-CFOCW</td>\n",
+              "      <td>Male</td>\n",
+              "      <td>0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>DSL</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>2016-05-01</td>\n",
+              "      <td>No</td>\n",
+              "      <td>One year</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Bank transfer (automatic)</td>\n",
+              "      <td>42.30</td>\n",
+              "      <td>1840.75</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>9237-HQITU</td>\n",
+              "      <td>Female</td>\n",
+              "      <td>0</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>Fiber optic</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>No</td>\n",
+              "      <td>2019-09-01</td>\n",
+              "      <td>2019-11-01 00:00:00</td>\n",
+              "      <td>Month-to-month</td>\n",
+              "      <td>Yes</td>\n",
+              "      <td>Electronic check</td>\n",
+              "      <td>70.70</td>\n",
+              "      <td>151.65</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   customerID  gender  SeniorCitizen Partner Dependents MultipleLines InternetService OnlineSecurity OnlineBackup DeviceProtection TechSupport StreamingTV StreamingMovies   BeginDate  \\\n",
+              "0  7590-VHVEG  Female              0     Yes         No           NaN             DSL             No          Yes               No          No          No              No  2020-01-01   \n",
+              "1  5575-GNVDE    Male              0      No         No            No             DSL            Yes           No              Yes          No          No              No  2017-04-01   \n",
+              "2  3668-QPYBK    Male              0      No         No            No             DSL            Yes          Yes               No          No          No              No  2019-10-01   \n",
+              "3  7795-CFOCW    Male              0      No         No           NaN             DSL            Yes           No              Yes         Yes          No              No  2016-05-01   \n",
+              "4  9237-HQITU  Female              0      No         No            No     Fiber optic             No           No               No          No          No              No  2019-09-01   \n",
+              "\n",
+              "               EndDate            Type PaperlessBilling              PaymentMethod  MonthlyCharges TotalCharges  \n",
+              "0                   No  Month-to-month              Yes           Electronic check           29.85        29.85  \n",
+              "1                   No        One year               No               Mailed check           56.95       1889.5  \n",
+              "2  2019-12-01 00:00:00  Month-to-month              Yes               Mailed check           53.85       108.15  \n",
+              "3                   No        One year               No  Bank transfer (automatic)           42.30      1840.75  \n",
+              "4  2019-11-01 00:00:00  Month-to-month              Yes           Electronic check           70.70       151.65  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qg1uv1vIgt_E",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 476
+        },
+        "outputId": "4d9c6c7e-f9dc-4ae6-86e0-ccad40da0ff6"
+      },
+      "source": [
+        "df_customer.info()"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 7043 entries, 0 to 7042\n",
+            "Data columns (total 20 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   customerID        7043 non-null   object \n",
+            " 1   gender            7043 non-null   object \n",
+            " 2   SeniorCitizen     7043 non-null   int64  \n",
+            " 3   Partner           7043 non-null   object \n",
+            " 4   Dependents        7043 non-null   object \n",
+            " 5   MultipleLines     6361 non-null   object \n",
+            " 6   InternetService   5517 non-null   object \n",
+            " 7   OnlineSecurity    5517 non-null   object \n",
+            " 8   OnlineBackup      5517 non-null   object \n",
+            " 9   DeviceProtection  5517 non-null   object \n",
+            " 10  TechSupport       5517 non-null   object \n",
+            " 11  StreamingTV       5517 non-null   object \n",
+            " 12  StreamingMovies   5517 non-null   object \n",
+            " 13  BeginDate         7043 non-null   object \n",
+            " 14  EndDate           7043 non-null   object \n",
+            " 15  Type              7043 non-null   object \n",
+            " 16  PaperlessBilling  7043 non-null   object \n",
+            " 17  PaymentMethod     7043 non-null   object \n",
+            " 18  MonthlyCharges    7043 non-null   float64\n",
+            " 19  TotalCharges      7043 non-null   object \n",
+            "dtypes: float64(1), int64(1), object(18)\n",
+            "memory usage: 1.1+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rPABhOzG7QbR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_customer['churn'] = df_customer['EndDate'] != 'No'"
+      ],
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OyS-o1RpEG3R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_customer['EndDate'] = df_customer['EndDate'].where(df_customer['EndDate'] != 'No', other=pd.Timestamp('2020-02-01'))\n",
+        "df_customer['EndDate'] = pd.to_datetime(df_customer['EndDate'])\n",
+        "df_customer['BeginDate'] = pd.to_datetime(df_customer['BeginDate'])"
+      ],
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FVmjmQjvVkq_",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_customer['months'] = (df_customer['EndDate'] - df_customer['BeginDate']).dt.days // 30"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cMogLPtCXoUx",
         "colab_type": "code",
         "colab": {}
       },
