--- a/S17_Final_Project.ipynb
+++ b/S17_Final_Project.ipynb
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "colab = False\n",
+    "colab = True\n",
     "if colab:\n",
     "    data_path = 'https://raw.githubusercontent.com/dnevo/Practicum/master/datasets/'\n",
     "else:\n",
